Update LimitViolationManager to return BusBreakerViolationLocation
Signed-off-by: jamal-khey <myjamal89@gmail.com>